# shepard-metzler-shape-renderer

./: .gitignore  LICENSE  README.md  environment.yaml  pyproject.toml
how-to-use/: config.yaml  example.ipynb
src/shaperenderer/: __init__.py  __main__.py  geometry.py  renderer.py  utils.py
